--- a/node-development/app/sass/framework/_hero.sass
+++ b/node-development/app/sass/framework/_hero.sass
@@ -69,7 +69,8 @@
 		margin-top: $vertical-unit
 		.bc-svg-icon
 			fill: $white
-	
+	@media screen and (min-width: $med) and (max-width: ($large - 1px)) 
+		height: 75vh
 
 .bc-hero
 	&.bc-hero--inpage
