--- a/node-development/app/sass/framework/_hero.sass
+++ b/node-development/app/sass/framework/_hero.sass
@@ -69,7 +69,7 @@
 		margin-top: $vertical-unit
 		.bc-svg-icon
 			fill: $white
-	@media screen and (min-width: $med) and (max-width: ($large - 1px)) 
+	@media screen and (min-width: $med) and (max-width: ($large - 1px)) and (orientation: portrait) 
 		height: 75vh
 
 .bc-hero
