--- a/node-development/app/css/style.css
+++ b/node-development/app/css/style.css
@@ -1069,28 +1069,27 @@ figcaption {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 3.57143rem;
-  height: 3.57143rem;
+  width: 2.57143rem;
+  height: 2.57143rem;
   overflow: hidden; }
   .bc-navigation-toggle .bc-menu-icon {
     position: relative;
-    width: 1.7411rem;
-    height: 1.7411rem;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center; }
     .bc-navigation-toggle .bc-menu-icon__icon {
       position: relative; }
-      .bc-navigation-toggle .bc-menu-icon__icon__line {
-        position: absolute;
-        transform-origin: center center;
-        stroke: #fff; }
-        .bc-navigation-toggle .bc-menu-icon__icon__line--top {
-          top: 0%; }
-        .bc-navigation-toggle .bc-menu-icon__icon__line--middle {
-          top: 50%; }
-        .bc-navigation-toggle .bc-menu-icon__icon__line--bottom {
-          top: 100%; }
+    .bc-navigation-toggle .bc-menu-icon__line {
+      stroke-width: 0.36rem;
+      stroke: #fff; }
+      .bc-navigation-toggle .bc-menu-icon__line--top {
+        top: 0%; }
+      .bc-navigation-toggle .bc-menu-icon__line--middle {
+        top: 50%; }
+      .bc-navigation-toggle .bc-menu-icon__line--bottom {
+        top: 100%; }
 
 @media screen and (min-width: 768px) {
   .bc-main-navigation__toggle {
