--- a/node-development/app/sass/framework/_navigation-schemes.sass
+++ b/node-development/app/sass/framework/_navigation-schemes.sass
@@ -6,29 +6,28 @@
 	display: flex
 	justify-content: center
 	align-items: center
-	width: 	#{(50/14)}rem
-	height: #{(50/14)}rem
+	width: 	#{(36/14)}rem
+	height: #{(36/14)}rem
 	overflow: hidden
 	.bc-menu-icon
 		position: relative
-		width: 	$text-04
-		height: $text-04
+		width: 	100%
+		height: 100%
 		display: flex
 		justify-content: center
 		align-items: center
 		&__icon
 			position: relative
-			
-			&__line
-				position: absolute
-				transform-origin: center center
-				stroke: $white
-				&--top
-					top: 0%
-				&--middle
-					top: 50%
-				&--bottom
-					top: 100%
+		&__line
+			stroke-width: 0.36rem;
+			stroke: $white; 
+	
+			&--top
+				top: 0%
+			&--middle
+				top: 50%
+			&--bottom
+				top: 100%
 .bc-main-navigation
 	@media screen and (min-width: $med)
 		&__toggle
