--- a/node-development/app/sass/framework/project-globals/_globals-project.sass
+++ b/node-development/app/sass/framework/project-globals/_globals-project.sass
@@ -45,6 +45,9 @@ $violet-invert:						$white
 
 $colors: ('primary': ($brand-primary, $brand-primary-invert), 'secondary': ($brand-secondary, $brand-secondary-invert), 'brand-darker': ($brand-darker, $brand-darker-invert), 'red':  ($red, $red-invert), 'dark-red':  ($dark-red, $dark-red-invert), 'orange': ($orange, $orange-invert), 'yellow': ($yellow, $yellow-invert), 'light-green': ($light-green, $light-green-invert), 'mid-green': ($mid-green, $mid-green-invert), 'blue': ($blue, $blue-invert), 'light-blue': ($light-blue, $light-blue-invert), 'purple': ($purple, $purple-invert), 'indigo': ($indigo, $indigo-invert), 'violet': ($violet, $violet-invert))
 
+@each $name, $colorList in $colors 
+	.is-#{$name}-text
+		color: nth($colorList, 1)
 
 //** Typography
 $base-font-family: 			'Poppins', sans-serif
