--- a/node-development/app/sass/framework/components/_bc-feature-component.sass
+++ b/node-development/app/sass/framework/components/_bc-feature-component.sass
@@ -1,5 +1,3 @@
-
-
 .bc-feature-component 
 	position: relative
 	@include makeSection
@@ -42,7 +40,7 @@
 		&__header
 			max-width: $text-max-width
 		&__content, &__header, &__cta
-			max-width: $text-max-width 
+			max-width: $content-max-width 
 		
 @import 'bc-4-col-feature' 
 @import 'bc-2-col-media-feature'
