--- a/node-development/app/sass/framework/project-globals/_globals-project.sass
+++ b/node-development/app/sass/framework/project-globals/_globals-project.sass
@@ -1,8 +1,8 @@
 @import '../globals'
 //Project global variables
 
-$content-max-width: 88%
-$text-max-width: 		44rem
+$content-max-width: calc(100% - 8.888rem)
+$text-max-width: 		42rem
 
 //Spacing
 $line-height:			1.45
