--- a/node-development/app/sass/style.sass
+++ b/node-development/app/sass/style.sass
@@ -21,6 +21,7 @@
 @import 'framework/hero' 
 @import 'framework/site-header'
 @import 'framework/components/full-width-slider'   
+@import 'framework/components/bc-content-component'
 @import 'framework/components/bc-feature-component'   
 @import 'framework/components/bc-inner-page-header'   
 @import 'framework/components/bc-inner-page-content'    
@@ -756,7 +757,7 @@ figure
 				
 		
 /* CTA feature */
-.bc-feature-component
+.bc-feature-component, .bc-content-component
 	&.bc-cta-feature
 		min-height: 100vh
 		display: flex
